terraform/route_tables.tf
resource "aws_route_table" "portfolio_cicd_public_rt" {
  vpc_id = aws_vpc.portfolio_cicd_vpc.id

  tags = {
    Name = "portfolio-cicd-public-rt"
  }
}

resource "aws_route" "portfolio_cicd_public_internet" {
  route_table_id         = aws_route_table.portfolio_cicd_public_rt.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.portfolio_cicd_igw.id
}

resource "aws_route_table_association" "public_subnet_az1" {
  subnet_id      = aws_subnet.public_subnet_az1.id
  route_table_id = aws_route_table.portfolio_cicd_public_rt.id
}

resource "aws_route_table_association" "public_subnet_az2" {
  subnet_id      = aws_subnet.public_subnet_az2.id
  route_table_id = aws_route_table.portfolio_cicd_public_rt.id
}

resource "aws_route_table" "private_app_subnet_az1_rt" {
  vpc_id = aws_vpc.portfolio_cicd_vpc.id

  tags = {
    Name = "portfolio-cicd-private-app-rt-az1"
  }
}

resource "aws_route" "private_app_subnet_az1_internet" {
  route_table_id         = aws_route_table.private_app_subnet_az1_rt.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.nat_gateway_az1.id
}

resource "aws_route_table_association" "private_app_subnet_az1" {
  subnet_id      = aws_subnet.private_app_subnet_az1.id
  route_table_id = aws_route_table.private_app_subnet_az1_rt.id
}
